Adiciona função que valida botão.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
 <header class="header">
   <img class="trybewarts-header-logo" src="/images/trybewarts-header-logo.svg" alt="Logotipo Trybewarts">
+  <form class="trybewarts-login" action="">
+    <input id="email" type="email" name="email" placeholder="Email">
+    <input id="senha" type="password" name="password" placeholder="Senha">
+    <button id="button-form">Entrar</button>
 </header>
+</form>
 
 <script src="script.js"></script>
 </body>
