--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <input id="email" type="email" name="email" placeholder="Email">
     <input id="senha" type="password" name="password" placeholder="Senha">
     <button id="button-form">Entrar</button>
+  </form>
 </header>
-</form>
+<main>
+  <form action="" id="evaluation-form"></form>
+</main>
 
 <script src="script.js"></script>
 </body>
