--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </form>
 </header>
 <main>
-  <form action="" id="evaluation-form"></form>
+  <form action="" id="evaluation-form">
+  </form>
+  <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
 </main>
 
 <script src="script.js"></script>
