--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
 </header>
 <main>
   <form action="" id="evaluation-form">
-    <input id="input-name" type="text" placeholder="Nome">
-    <input id="input-lastname" type="text" placeholder="Sobrenome">
-    <input id="input-email" type="email" placeholder="Email">
-    <select name="" id="house">
-      <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-      <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-      <option value="Corvinode" id="corvinode-house">Corvinode</option>
-      <option value="Pytherina" id="pytherina-house">Pytherina</option>
-    </select>
+    <section>
+      <input id="input-name" type="text" placeholder="Nome">
+      <input id="input-lastname" type="text" placeholder="Sobrenome">
+      <input id="input-email" type="email" placeholder="Email">
+    </section>
+    <section>
+      <select name="" id="house">
+        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+        <option value="Corvinode" id="corvinode-house">Corvinode</option>
+        <option value="Pytherina" id="pytherina-house">Pytherina</option>
+      </select>
+    </section>
   </form>
   <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
 </main>
