--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
     <input id="input-name" type="text" placeholder="Nome">
     <input id="input-lastname" type="text" placeholder="Sobrenome">
     <input id="input-email" type="email" placeholder="Email">
+  
+    <section id="container-checkbox">
+    <label id="label-content" for="">
+      Qual conteúdo você está com mais vontade de aprender?
+    </label>
+    <div class="input-checkbox">
+      <input type="checkbox" name="" id="" value="HoFs">Hofs
+      <input type="checkbox" name="" id="" value="Jest">Jest
+      <input type="checkbox" name="" id="" value="Promises">Promises
+    </div>
+    <div class="input-checkbox">
+      <input type="checkbox" name="" id="" value="React">React
+      <input type="checkbox" name="" id="" value="SQL">SQL
+      <input type="checkbox" name="" id="" value="Python">Python
+    </div>
+  </section>  
   </form>
   <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
 </main>
