--- a/index.html
+++ b/index.html
@@ -50,7 +50,22 @@
     <input type="checkbox" name="" id="" value="SQL">SQL
     <input type="checkbox" name="" id="" value="Python">Python
   </div>
-</section>  
+</section>
+<section id="label-rate">
+<label for="">Como você avalia a Trybewarts?
+  <input type="radio" name="rate" value="1">1
+  <input type="radio" name="rate" value="2">2  
+  <input type="radio" name="rate" value="3">3
+  <input type="radio" name="rate" value="4">4
+  <input type="radio" name="rate" value="5">5
+  <input type="radio" name="rate" value="6">6
+  <input type="radio" name="rate" value="7">7
+  <input type="radio" name="rate" value="8">8
+  <input type="radio" name="rate" value="9">9
+  <input type="radio" name="rate" value="10">10
+</label>
+
+</section>
 
   </form>
   <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
