--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
   <input type="radio" name="rate" value="9">9
   <input type="radio" name="rate" value="10">10
 </label>
-
+</section>
+<section>
+  <label class="textarea" for="">Deixe seu comentário:
+  <textarea name="" id="textarea" cols="30" rows="10" maxlength="500" ></textarea>
+</label>
+ 
 </section>
 
   </form>
