Acrescenta ao formulario um campo de entrada para qual familia a pessoa estudante de identifica

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
         <option value="Pytherina" id="pytherina-house">Pytherina</option>
       </select>
     </section>
+    <hr>
+    <section id="family-section">
+      <label id="label-family">Qual sua família?</label>
+      <label for="family-front">
+        <input type="radio" name="family" value="Frontend" id="family-front">Frontend
+      </label>
+      <label for="family-back">
+        <input type="radio" name="family" value="Backend" id="family-back">Backend
+      </label>
+      <label for="family-full">
+        <input type="radio" name="family" value="FullStack" id="family-full">FullStack
+      </label>
+    </section>
+
   </form>
   <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
 </main>
