--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
       <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
         <input type="checkbox" name="" id="agreement">
     </section>
+    <section>
+      <button type="submit" id="submit-btn">Enviar</button>
+    </section>
 
   </form>
   <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
