--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 </section>
 <section>
   <label class="textarea" for="">Deixe seu comentário:
+    <p id="counter">500</p>
   <textarea name="" id="textarea" cols="30" rows="10" maxlength="500" ></textarea>
 </label>
 
@@ -99,6 +100,7 @@
   <img id="trybewarts-forms-logo" src="/images/trybewarts-colored.svg" alt="" height="500px">
 </main>
 
-<script src="script.js"></script>
+  <footer>Direitos reservados à Trybewarts©</footer>
+  <script src="script.js"></script>
 </body>
 </html>
