--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
     <section>
       <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
-        <input type="checkbox" name="" id="agreement">
+        <input type="checkbox" name="" id="agreement" required>
     </section>
     <section>
-      <button type="submit" id="submit-btn">Enviar</button>
+      <button type="submit" id="submit-btn" disabled>Enviar</button>
     </section>
 
   </form>
