--- a/index.html
+++ b/index.html
@@ -55,33 +55,33 @@
     Qual conteúdo você está com mais vontade de aprender?
   </label>
   <div class="input-checkbox">
-    <input type="checkbox" name="" id="" value="HoFs">Hofs
-    <input type="checkbox" name="" id="" value="Jest">Jest
-    <input type="checkbox" name="" id="" value="Promises">Promises
+    <label for="hofs"><input type="checkbox" name="" id="hofs" value="HoFs">Hofs</label>
+    <label for="jest"><input type="checkbox" name="" id="jest" value="Jest">Jest</label>
+    <label for="promises"><input type="checkbox" name="" id="promises" value="Promises">Promises</label>
   </div>
   <div class="input-checkbox">
-    <input type="checkbox" name="" id="" value="React">React
-    <input type="checkbox" name="" id="" value="SQL">SQL
-    <input type="checkbox" name="" id="" value="Python">Python
+    <label for="react"><input type="checkbox" name="" id="react" value="React">React</label>
+    <label for="sql"><input type="checkbox" name="" id="sql" value="SQL">SQL</label>
+    <label for="phyton"><input type="checkbox" name="" id="phyton" value="Python">Python</label>
   </div>
 </section>
 <hr>
 <section id="label-rate">
 <label for="">Como você avalia a Trybewarts?
-  <input type="radio" name="rate" value="1">1
-  <input type="radio" name="rate" value="2">2
-  <input type="radio" name="rate" value="3">3
-  <input type="radio" name="rate" value="4">4
-  <input type="radio" name="rate" value="5">5
-  <input type="radio" name="rate" value="6">6
-  <input type="radio" name="rate" value="7">7
-  <input type="radio" name="rate" value="8">8
-  <input type="radio" name="rate" value="9">9
-  <input type="radio" name="rate" value="10">10
+  <label for="1"><input type="radio" name="rate" value="1" id="1" class="radio">1</label>
+  <label for="2"><input type="radio" name="rate" value="2" id="2" class="radio">2</label>
+  <label for="3"><input type="radio" name="rate" value="3" id="3" class="radio">3</label>
+  <label for="4"><input type="radio" name="rate" value="4" id="4" class="radio">4</label>
+  <label for="5"><input type="radio" name="rate" value="5" id="5" class="radio">5</label>
+  <label for="6"><input type="radio" name="rate" value="6" id="6" class="radio">6</label>
+  <label for="7"><input type="radio" name="rate" value="7" id="7" class="radio">7</label>
+  <label for="8"><input type="radio" name="rate" value="8" id="8" class="radio">8</label>
+  <label for="9"><input type="radio" name="rate" value="9" id="9" class="radio">9</label>
+  <label for="10"><input type="radio" name="rate" value="10" id="10" class="radio">10</label>
 </label>
 </section>
 <section>
-  <label class="textarea" for="">Deixe seu comentário:
+  <label class="textarea" for="textarea">Deixe seu comentário:
     <p id="counter">500</p>
   <textarea name="" id="textarea" cols="30" rows="10" maxlength="500" ></textarea>
 </label>
@@ -89,7 +89,7 @@
 </section>
 
     <section>
-      <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
+      <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
         <input type="checkbox" name="" id="agreement" required>
     </section>
     <section>
