Refatoração do código

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <section id="family-section">
       <label id="label-family">Qual sua família?</label>
       <label for="family-front">
-        <input type="radio" name="family" value="Frontend" id="family-front">Frontend
+        <input type="radio" name="family" value="Frontend" id="family-front" class="family">Frontend
       </label>
       <label for="family-back">
-        <input type="radio" name="family" value="Backend" id="family-back">Backend
+        <input type="radio" name="family" value="Backend" id="family-back" class="family">Backend
       </label>
       <label for="family-full">
-        <input type="radio" name="family" value="FullStack" id="family-full">FullStack
+        <input type="radio" name="family" value="FullStack" id="family-full" class="family">FullStack
       </label>
     </section>
     </label>
@@ -55,14 +55,14 @@
     Qual conteúdo você está com mais vontade de aprender?
   </label>
   <div class="input-checkbox">
-    <label for="hofs"><input type="checkbox" name="" id="hofs" value="HoFs">Hofs</label>
-    <label for="jest"><input type="checkbox" name="" id="jest" value="Jest">Jest</label>
-    <label for="promises"><input type="checkbox" name="" id="promises" value="Promises">Promises</label>
+    <label for="hofs"><input type="checkbox" name="" id="hofs" value="HoFs" class="subject">Hofs</label>
+    <label for="jest"><input type="checkbox" name="" id="jest" value="Jest" class="subject">Jest</label>
+    <label for="promises"><input type="checkbox" name="" id="promises" value="Promises" class="subject">Promises</label>
   </div>
   <div class="input-checkbox">
-    <label for="react"><input type="checkbox" name="" id="react" value="React">React</label>
-    <label for="sql"><input type="checkbox" name="" id="sql" value="SQL">SQL</label>
-    <label for="phyton"><input type="checkbox" name="" id="phyton" value="Python">Python</label>
+    <label for="react"><input type="checkbox" name="" id="react" value="React" class="subject">React</label>
+    <label for="sql"><input type="checkbox" name="" id="sql" value="SQL" class="subject">SQL</label>
+    <label for="phyton"><input type="checkbox" name="" id="phyton" value="Python" class="subject">Python</label>
   </div>
 </section>
 <hr>
